--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -205,18 +205,18 @@ jobs:
       matrix:
         include:
           - job-name: windows-2019
-            os: windows-2019
+            os-version: '2019'
             generator: '"Visual Studio 16 2019"'
 
           - job-name: windows-2019 (clangcl)
-            os: windows-2019
+            os-version: '2019'
             generator: '"Visual Studio 16 2019" -T "clangcl"'
 
           - job-name: windows-2016
-            os: windows-2016
+            os-version: '2016'
             generator: '"Visual Studio 15 2017"'
 
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-${{ matrix.os-version }}
     steps:
       - uses: actions/checkout@master
 
