e   Add cron job for github actions - run daily for now, for testing

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -9,6 +9,8 @@ on:
     branches:
       - '*'
       - '!travis_ccache'
+  schedule:
+    - cron: '0 0 * * *'  # every day at midnight
 
 jobs:
   clang-format:
