e   cron job for github actions now runs Wednesday & Saturday

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -10,7 +10,7 @@ on:
       - '*'
       - '!travis_ccache'
   schedule:
-    - cron: '0 0 * * *'  # every day at midnight
+    - cron: '16 0 * * 3,6'  # <https://crontab.guru/#16_0_*_*_3,6> - "At 00:16 on Wednesday and Saturday."
 
 jobs:
   clang-format:
