--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -103,12 +103,26 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
+          - job-name: 'gcc10 unity'
+            os-version: '18.04'
+            c-compiler: 'gcc-10'
+            cxx-compiler: 'g++-10'
+            generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
+            relative_build_dir_path: ''
+
           - job-name: 'gcc10 ninja'
             os-version: '18.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Ninja"'
             relative_build_dir_path: '../'
+
+          - job-name: 'gcc10 ninja-unity'
+            os-version: '18.04'
+            c-compiler: 'gcc-10'
+            cxx-compiler: 'g++-10'
+            generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
+            relative_build_dir_path: ''
     runs-on: ubuntu-${{ matrix.os-version }}
     steps:
       - uses: actions/checkout@master
