F   Allow passing tests to notify the test framework that they passed. (#148)
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library(${PROJECT_NAME}
         core/Options.cpp
         core/Reporter.h
         integrations/CheckFileMacroIsAbsolute.h
+        integrations/FrameworkIntegrations.cpp
+        integrations/FrameworkIntegrations.h
         integrations/boost_test/BoostTestApprovals.h
         integrations/catch/Catch2Approvals.h
         integrations/cpputest/CppUTestApprovals.h
