e   Try fixing windows builds, which failed due to backslashes in ${{ github.workspace }}
This is due to the windows build now being run github's bash shell

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -218,7 +218,7 @@ jobs:
 
     name: Windows ${{ matrix.job-name }}
     env:
-      BUILD_PATH: ${{ github.workspace }}/build_space
+      BUILD_PATH: build_space
     steps:
       - uses: actions/checkout@master
 
