--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -54,6 +54,8 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
+          # maybe add clang7 - which was tested in Travis
+
           - job-name: 'clang8'
             os-version: '18.04'
             c-compiler: 'clang-8'
@@ -76,7 +78,7 @@ jobs:
             relative_build_dir_path: ''
 
           # maybe add gcc5 - which was tested in Travis
-          # maybe add gcc5 - which was tested in Travis
+          # maybe add gcc6 - which was tested in Travis
 
           - job-name: 'gcc7'
             os-version: '18.04'
