--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(catch2_existing_main)
+add_subdirectory(catch2_starter)
 add_subdirectory(cpputest_existing_main)
 add_subdirectory(doctest_existing_main)
 add_subdirectory(fmt_approvals_demo)
