t   Add cpputest_starter, for use in documentation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(catch2_existing_main)
 add_subdirectory(catch2_starter)
 
 add_subdirectory(cpputest_existing_main)
-# TODO add_subdirectory(cpputest_starter)
+add_subdirectory(cpputest_starter)
 
 add_subdirectory(doctest_existing_main)
 add_subdirectory(doctest_starter)
