--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(fmt_approvals_demo)
 
 add_subdirectory(googletest_existing_main)
 add_subdirectory(googletest_starter)
+
+add_subdirectory(ut_starter)
