e   Don't build boost_starter on cygwin, to avoid cluttering docs

--- a/examples/boost_starter/CMakeLists.txt
+++ b/examples/boost_starter/CMakeLists.txt
@@ -2,6 +2,17 @@ if (NOT APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION)
     return()
 endif ()
 
+if (CYGWIN)
+    # When ${Boost_INCLUDE_DIRS} is added as a SYSTEM location,
+    # the cygwin Appveyor builds fail to find <stdlib.h>.
+    # In tests/Boost_Tests/CMakeLists.txt, we work around that.
+    # But here, this small example is for documentation purposes,
+    # and we don't want to clutter up the documentation with a special
+    # case for Cygwin. So skip this directory on Cygwin.
+    MESSAGE("Skipping this directory on Cygwin.")
+    return()
+endif ()
+
 # begin-snippet: boost_starter_cmake
 set(EXE_NAME boost_starter)
 set(CMAKE_CXX_STANDARD 11)
