--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -247,6 +247,8 @@ jobs:
         run: |
           conan install boost/1.72.0@ -o boost:header_only=True -g deploy --install-folder ${env:GITHUB_WORKSPACE}
           ${boostroot} = "${env:GITHUB_WORKSPACE}"
+          dir ${boostroot}
+          dir ${boostroot}\boost
           echo "BOOST_ROOT=${boostroot}" >> ${env:GITHUB_ENV}
           echo "BOOST_INCLUDEDIR=${boostroot}\include" >> ${env:GITHUB_ENV}
 
