e Try different location for boost install
I can't work out why the instructions that work in pprovalTests.cpp.CMakeSamples
are not working here.

https://github.com/claremacrae/ApprovalTests.cpp.CMakeSamples/blob/50a50b890f23c8ffd0a731150f34f6b0d699bfdd/.github/workflows/github_actions_build.yml#L312-L316

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -245,8 +245,8 @@ jobs:
 
       - name: install boost
         run: |
-          conan install boost/1.72.0@ -o boost:header_only=True -g deploy --install-folder ${env:GITHUB_WORKSPACE}
-          ${boostroot} = "${env:GITHUB_WORKSPACE}"
+          ${boostroot} = "${env:GITHUB_WORKSPACE}\boost_install"
+          conan install boost/1.72.0@ -o boost:header_only=True -g deploy --install-folder ${boostroot}
           dir ${boostroot}
           dir ${boostroot}\boost
           echo "BOOST_ROOT=${boostroot}" >> ${env:GITHUB_ENV}
