e Disable Linux and Mac CI builds, until cygwin and mingw are fixed

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -39,7 +39,7 @@ jobs:
 
   Linux:
     needs: clang-format
-    # if: false # Disable this platform temporarily
+    if: false # Disable this platform temporarily
     runs-on: ubuntu-${{ matrix.os-version }}
     strategy:
       fail-fast: false
@@ -155,7 +155,7 @@ jobs:
 
   macOS:
     needs: clang-format
-    # if: false # Disable this platform temporarily
+    if: false # Disable this platform temporarily
     runs-on: macos-${{ matrix.os-version }}
     strategy:
       fail-fast: false
@@ -213,7 +213,7 @@ jobs:
 
   Windows:
     needs: clang-format
-    # if: false # Disable this platform temporarily
+    if: false # Disable this platform temporarily
     runs-on: windows-${{ matrix.os-version }}
     strategy:
       fail-fast: false
